--- a/woodberry.dist.source/app/styles/responsive.less
+++ b/woodberry.dist.source/app/styles/responsive.less
@@ -27,7 +27,7 @@
 
 	}
 #portal-columns, #portal-footer-wrapper {
-	width: 980px;
+	width: 912px;
 	margin-left: auto;
 	margin-right: auto;
 	}
@@ -52,8 +52,9 @@
 }
 
 #portal-logo {
-	.column(3);
-	//.push(1);
+	.column(4);
+	.push(1);
+        text-align: center;
 }
 
 
@@ -64,12 +65,12 @@
 	#portal-globalnav {
 		//.column(6);
 		.column(6,12);
-			.push(1);
+			//.push(1);
 	}
 	#portal-subtitle, #portal-title {
 		.column(6);
 		//.column(6,12);
-			.push(1);
+			//.push(1);
 	}
 }
 #portal-column-content {
